# streaming-voice-coach

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/voice_coach/: __init__.py  app.py  boundaries.py  coach.py  session.py  settings.py
tests/: test_boundaries.py  test_coach.py  test_session.py
