[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "streaming-voice-coach"
version = "0.1.0"
description = "Low-latency streaming voice AI coach with Whisper and Cartesia boundaries."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111,<1.0",
    "uvicorn[standard]>=0.30,<1.0",
    "openai>=1.35,<2.0",
    "cartesia>=1.0,<2.0",
    "pydantic-settings>=2.3,<3.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2,<9.0",
    "pytest-asyncio>=0.23,<1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
